--- a/booking_flight/src/app/globals.css
+++ b/booking_flight/src/app/globals.css
@@ -10,6 +10,9 @@
       @apply w-[300px] h-[100px] border-4 rounded-md text-3xl border-black ;
     }
     .btn{
-      @apply border-4 rounded-full py-4 px-7 font-serif font-bold border-black text-xl hover:bg-slate-300 transition duration-500 ease-in-out ;
+      @apply border-4 rounded-full py-2 px-5 font-serif font-bold border-black text-xl hover:bg-slate-300 transition duration-500 ease-in-out ;
+    }
+    .nav-style{
+      @apply text-2xl font-semibold text-slate-600 leading-normal hover:scale-125 transition duration-500 ease-in-out ;
     }
   }
