--- a/booking_flight/src/app/globals.css
+++ b/booking_flight/src/app/globals.css
@@ -25,4 +25,12 @@
     .BlueBtn{
       @apply  rounded-md p-2 bg-blue-600 text-white font-semibold hover:bg-blue-800 transition duration-500 ease-in-out ;
     }
+
+    .effect{
+      @apply  transition duration-500 ease-in-out ;
+    }
+
+    .overflow{
+      @apply overflow-hidden text-nowrap text-ellipsis;
+    }
   }
